fix: welcome section on small resolution

--- a/src/components/welcome/WelcomeSection.module.scss
+++ b/src/components/welcome/WelcomeSection.module.scss
@@ -132,7 +132,8 @@
     color: $text-color-welcome;
   }
 
-  @media (max-width: 380px) {
+  @media (max-width: 420px) {
     font-size: 20px;
+    margin-bottom: 15px;
   }
 }
